Not working object Serialization