@@ -5,13 +5,22 @@ import javafx.stage.Stage;
 import ru.cs.myasoedov.client.Client;
 import ru.cs.myasoedov.utils.Utils;
 
+import java.io.IOException;
+import java.net.Socket;
+import java.util.Timer;
+import java.util.TimerTask;
+
 
 public class Main extends Application {
 
     static Stage primaryStage;
     final static Client currentClient = new Client();
-    static ControllerMain controllerMain;
-
+    public static ControllerMain controllerMain;
+    public static TestController testController;
+    //--module-path
+    //"C:\Program Files\Java\javafx-sdk-15.0.1\lib"
+    //--add-modules
+    //javafx.controls,javafx.fxml
 
     @Override
     public void start(Stage stage) {
@@ -19,7 +28,10 @@ public class Main extends Application {
         Utils.prepareStage(primaryStage, getClass().getResource("connection.fxml"), "Подключение", 600, 400);
     }
 
-    public static void main(String[] args) {
+    public static void main(String[] args) throws IOException {
+
+        currentClient.setConnection(new Socket("localhost", 8001));
+        currentClient.process();
         launch();
     }
 }
